# embedded-sss

./: .gitmodules  Cargo.toml
embedded-sss/: Cargo.toml  image.rgb565  rust-toolchain.toml
embedded-sss/.cargo/: config.toml
embedded-sss/src/: lib.rs  main.rs
